tests/purs/failing/LocalTypeSynonyms3.out
Error found:
in module [33mLocalTypeSynonyms3[0m
at tests/purs/failing/LocalTypeSynonyms3.purs:10:3 - 10:17 (line 10, column 3 - line 10, column 17)

  Type synonym [33mF[0m is partially applied.
  Type synonyms must be applied to all of their type arguments.

in type synonym [33mG[0m

See https://github.com/purescript/documentation/blob/master/errors/PartiallyAppliedSynonym.md for more information,
or to contribute content related to this error.

